--- a/deployment.yml
+++ b/deployment.yml
@@ -1,34 +1,39 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-        - name: tomcat-deployment
-          lables:
-                  app: vprofile
+  name: tomcat-deployment
+  labels:
+    app: vprofile
 spec:
-  replicas: 2
+  replicas: 3
   selector:
-          matchLables:
-                  app: vprofile
+    matchLabels:
+      app: vprofile
   template:
     metadata:
-      lables:
+      labels:
         app: vprofile
-spec:
-  containers:
-    - name: vprofile application
-      image: padhudockerpractice/vprofile
-      ports:
-              containerPort: 8080
-#Service
+    spec:
+      containers:
+      - name: vprofile
+        image: padhudockerpractice/vprofile-v1
+        ports:
+        - containerPort: 8080
+
+
+
+          #sevices
+
+
 apiVersion: v1
 kind: Service
 metadata:
-        lables:
-                app: vprofile-service
+  name: tomcat-service
 spec:
   selector:
     app: vprofile
     type: LoadBalancer
   ports:
-          port: 8080
-          targetPort: 8080
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080          
